...
                      identifier: 'nav_home',
                      label: 'Home',
                    ),
                    _buildNavItem(
                      icon: Icons.inventory,
                      index: 1,
                      identifier: 'nav_lost_found',
                      label: 'Lost & Found',
                    ),
                    _buildNavItem(
                      icon: Icons.person,
                      index: 2,
                      identifier: 'nav_profile',
                      label: 'Profile',
                    ),
                  ],
                ),
              ),
            ),
...
