final List<Map<String, dynamic>> mahasiswaDummy = [
  {
    "fullName": "Ahmad Faizal",
    "username": "faizal123",
    "nim": "210123456",
    "gender": "Male",
    "birthPlace": "Malang",
    "birthDate": "1999-05-15",
    "addressHome": "Jl. Merdeka No. 10, Malang",
    "addressNow": "Jl. Soekarno-Hatta No. 20, Malang",
    "contact": {
      "email": "faizal123@gmail.com",
      "phone": "081234567890",
      "facebook": "faizal.fb",
      "skype": "faizal.skype",
      "whatsapp": "081234567890",
      "line": "faizal.line"
    },
    "photoPath": "Assets/profile/faizal.jpg"
  },
  {
    "fullName": "Nur Aisyah",
    "username": "aisyah456",
    "nim": "210987654",
    "gender": "Female",
    "birthPlace": "Surabaya",
    "birthDate": "2000-07-20",
    "addressHome": "Jl. Pahlawan No. 5, Surabaya",
    "addressNow": "Jl. Veteran No. 15, Surabaya",
    "contact": {
      "email": "aisyah456@gmail.com",
      "phone": "081298765432",
      "facebook": "aisyah.fb",
      "skype": "aisyah.skype",
      "whatsapp": "081298765432",
      "line": "aisyah.line"
    },
    "photoPath": "Assets/profile/aisyah.jpg"
  }
];
